23.03.2025 - feature/main-logic | improved existing logic and wrote new logic